; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_memtrace.c_memtraceMalloc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_memtrace.c_memtraceMalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32)*, i8* (i32)* }

@memtraceOut = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [29 x i8] c"MEMTRACE: allocate %d bytes\0A\00", align 1
@memtraceBase = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @memtraceMalloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @memtraceMalloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @memtraceOut, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load i64, i64* @memtraceOut, align 8
  %7 = load i32 (i32)*, i32 (i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @memtraceBase, i32 0, i32 0), align 8
  %8 = load i32, i32* %2, align 4
  %9 = call i32 %7(i32 %8)
  %10 = call i32 @fprintf(i64 %6, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %11

11:                                               ; preds = %5, %1
  %12 = load i8* (i32)*, i8* (i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @memtraceBase, i32 0, i32 1), align 8
  %13 = load i32, i32* %2, align 4
  %14 = call i8* %12(i32 %13)
  ret i8* %14
}

declare dso_local i32 @fprintf(i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
